add vr-view and video url

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,15 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    // Adds Google VR spatial audio support
+    implementation 'com.google.vr:sdk-audio:1.80.0'
+
+    // Required for all Google VR apps
+    implementation 'com.google.vr:sdk-base:1.80.0'
+
+    compile 'com.google.vr:sdk-videowidget:1.80.0'
+
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
