--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     implementation 'com.google.vr:sdk-base:1.80.0'
 
     compile 'com.google.vr:sdk-videowidget:1.80.0'
+    compile 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
 
     testImplementation 'junit:junit:4.12'
